# puls-events-ai

./: .dockerignore  Dockerfile  README.md  app.py  interface.py  pyproject.toml  requirements.txt
data/: events_raw.csv  feedback.db
notebooks/: RAG_pipe.ipynb
src/: data_loader.py  embedding.py  openagenda_loader.py  rag_chain.py  vectorsearch.py
tests/: test_api.py
utils/: feedback_db.py  file_utils.py  pydantic_utils.py
vectorDB/: index.faiss  index.pkl
