[project]
name = "rag-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "docling>=2.64.1",
    "faiss-cpu>=1.13.1",
    "fastapi>=0.124.4",
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "langchain>=1.1.3",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.1.0",
    "langchain-mistralai>=1.1.1",
    "logging>=0.4.9.6",
    "matplotlib>=3.10.8",
    "mistral>=21.0.0",
    "nltk>=3.9.2",
    "pathlib>=1.0.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "ragas>=0.4.1",
    "sentence-transformers>=5.2.0",
    "spicy>=0.16.0",
    "sqlalchemy>=2.0.45",
    "streamlit>=1.52.1",
    "streamlit-feedback>=0.1.4",
    "tqdm>=4.67.1",
    "uvicorn>=0.38.0",
    "wordcloud>=1.9.4",
]
